# wEditor_UNIX

./: .gitignore  CMakeLists.txt  MainFrame.h  Makefile  README.md  SyntaxHighlightCPP.cpp  SyntaxHighlightCPP.h  app.rc  main.cpp  wEditor
Functions/: DragNDrop.cpp  DragNDrop.h  MainFrame.h  ThemeSettings.cpp  ThemeSettings.h
Preferences/: Preferences.cpp  Preferences.h
SyntaxHighlighter/: SyntaxHighlightAssembly.cpp  SyntaxHighlightAssembly.h  SyntaxHighlightC.cpp  SyntaxHighlightC.h  SyntaxHighlightCPP.cpp  SyntaxHighlightCPP.h  SyntaxHighlightC_old.cpp  SyntaxHighlightJava.cpp  SyntaxHighlightJava.h  SyntaxHighlightPython.cpp  SyntaxHighlightPython.h  SyntaxHighlightPython_old.cpp  SyntaxHighlightSQL.cpp  SyntaxHighlightSQL.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  Text.cpp  Text.h
wEditor.app/Contents/: Info.plist
wEditor.app/Contents/Frameworks/: libwx_baseu-3.3.1.dylib  libwx_baseu_net-3.3.dylib  libwx_baseu_xml-3.3.1.0.0.dylib  libwx_osx_cocoau_adv-3.3.1.0.0.dylib  libwx_osx_cocoau_aui-3.3.1.dylib  libwx_osx_cocoau_gl-3.3.1.dylib  libwx_osx_cocoau_html-3.3.dylib  libwx_osx_cocoau_media-3.3.dylib  libwx_osx_cocoau_propgrid-3.3.1.dylib  libwx_osx_cocoau_qa-3.3.1.0.0.dylib  libwx_osx_cocoau_ribbon-3.3.1.0.0.dylib  libwx_osx_cocoau_richtext-3.3.1.dylib  libwx_osx_cocoau_stc-3.3.1.dylib  libwx_osx_cocoau_webview-3.3.dylib  libwx_osx_cocoau_xrc-3.3.1.dylib
wEditor.app/Contents/MacOS/: wEditor
wEditor.app/Contents/Resources/: icon.icns
